--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ setuptools
 pytest>=6.0.0
 pytest-cov>=2.6.1
 numpy>=1.16.2
-matplotlib==3.3.4
+matplotlib>=3.3.4
 scikit-learn>=0.24.1
 scipy>=1.4.1
 pandas>=1.3.5
